--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,7 @@ python-docx>=1.1.0
 unstructured>=0.11.0
 
 # Text Processing
-langchain>=0.1.0
-langchain-community>=0.0.10
+langchain-text-splitters>=0.2.0
 tiktoken>=0.5.2
 
 # Terraform HCL Parsing
