fix(config): add LLM provider settings to resolve validation error
Add LLMProviderType enum and provider configuration fields to Settings
class to properly handle LLM_PROVIDER, OPENAI_API_KEY, and
ANTHROPIC_API_KEY environment variables.

- Add LLMProviderType enum with bedrock, openai, anthropic options
- Add llm_provider, openai_api_key, anthropic_api_key to Settings
- Update factory to use default provider from settings
- Auto-inject API keys from settings when not explicitly provided
- Update .env.example with new configuration options

--- a/.env.example
+++ b/.env.example
@@ -12,15 +12,31 @@ SECRET_KEY=your-secret-key-change-in-production
 API_KEY=your-api-key-change-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# AWS Bedrock
+# LLM Provider Configuration
+# Options: bedrock, openai, anthropic
+LLM_PROVIDER=bedrock
+
+# AWS Bedrock (used when LLM_PROVIDER=bedrock)
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 BEDROCK_MODEL_ID=anthropic.claude-3-sonnet-20240229-v1:0
 
+# OpenAI (used when LLM_PROVIDER=openai)
+OPENAI_API_KEY=your-openai-api-key
+
+# Anthropic (used when LLM_PROVIDER=anthropic)
+ANTHROPIC_API_KEY=your-anthropic-api-key
+
+# Redis
+REDIS_URL=redis://localhost:6379/0
+
 # ChromaDB
 CHROMA_PERSIST_DIRECTORY=./chroma_data
 CHROMA_COLLECTION_NAME=documents
+
+# Terraform Storage
+TERRAFORM_STORAGE_PATH=./terraform_data
 
 # Document Processing
 CHUNK_SIZE=1000
