--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ PORT=8000
 SECRET_KEY=your-secret-key-change-in-production
 API_KEY=your-api-key-change-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+AUTH_DISABLED=false  # Set to true to disable auth (for testing in private VPC)
 
 # LLM Provider Configuration
 # Options: bedrock, openai, anthropic
@@ -18,9 +19,22 @@ LLM_PROVIDER=bedrock
 
 # AWS Bedrock (used when LLM_PROVIDER=bedrock)
 AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-BEDROCK_MODEL_ID=anthropic.claude-3-sonnet-20240229-v1:0
+BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-5-20250929-v1:0
+
+# AWS Authentication (choose ONE method):
+#
+# Option 1: EC2 Instance Role (RECOMMENDED for EC2)
+#   - Leave AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY empty/commented
+#   - The EC2's attached IAM role will be used automatically
+#
+# Option 2: Assume a different IAM Role
+#   - Set AWS_ASSUME_ROLE_ARN to the role you want to assume
+#   - Your EC2's role must have sts:AssumeRole permission for this role
+# AWS_ASSUME_ROLE_ARN=arn:aws:iam::123456789012:role/EC2-Admin-Role
+#
+# Option 3: Explicit credentials (NOT recommended for EC2)
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 
 # OpenAI (used when LLM_PROVIDER=openai)
 OPENAI_API_KEY=your-openai-api-key
